fix: enhance home view with new heading and instructional text; update styling for better visibility and user experience; add form validation for case submission

--- a/public/assets/css/seniorCounsel/addnewcase.css
+++ b/public/assets/css/seniorCounsel/addnewcase.css
@@ -15,9 +15,10 @@ body {
 } 
 
 .new-case-section h1 {
-    color: #ffffff;
-    background-color: rgb(29, 27, 49);
-    font-size: 20px;
+    color: #1d1b31;
+    background-color: #f4f8ff;
+    font-size: 30px;
+    font-weight: bold;
     margin-bottom: 10px;
     padding: 10px;
     text-transform: uppercase;
@@ -35,7 +36,7 @@ body {
     background-color: #E4E9F7;
     padding: 40px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.18);
     flex: 1;
 }
 
@@ -62,7 +63,7 @@ body {
 .form-group input {
     width: 100%;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 6px;
     background-color: #fff;
     border: 1px solid #ddd;
     font-size: 15px;
@@ -74,14 +75,14 @@ body {
 
 .form-group input:focus {
     border-color: #fa9800;
-    outline: none;
+    outline: #fa9800;
 }
 
 .large-container{
     background-color: #E4E9F7;
     padding: 20px 40px 20px 40px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.18);
     flex: 1;
     margin: 20px;
     margin-bottom: 0;
